--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
-baseURL = "https://example.com"
+baseURL = ""
 languageCode = "en-us"
 title = "Auto Epi"
-theme = "cactus"
+theme = "hexo-theme-cactus"
 disqusShortname = "example" # Used when comments is enabled. Cactus will use site title if not set
 # googleAnalytics = "UA-1234-5"
 
